# VegaFEM

./: .clang-format  .gitignore  Makefile  README.md  build
Makefile-headers/: Makefile-header  Makefile-header.osx
examples/turtle/: turtle.config
libraries/clothBW/: clothBW.cpp  clothBW.h  clothBWMT.cpp
libraries/corotationalLinearFEM/: corotationalLinearFEM.cpp  corotationalLinearFEM.h  corotationalLinearFEMMT.cpp
libraries/elasticForceModel/: StVKForceModel.cpp  StVKForceModel.h  clothBWForceModel.cpp  clothBWForceModel.h  corotationalLinearFEMForceModel.cpp  corotationalLinearFEMForceModel.h  isotropicHyperelasticFEMForceModel.cpp  isotropicHyperelasticFEMForceModel.h  linearFEMForceModel.cpp  linearFEMForceModel.h  massSpringSystemForceModel.cpp  massSpringSystemForceModel.h
libraries/forceModel/: forceModel.cpp  forceModel.h
libraries/integrator/: integratorSolverSelection.h
libraries/integratorSparse/: centralDifferencesSparse.cpp  centralDifferencesSparse.h  eulerSparse.cpp  eulerSparse.h  implicitBackwardEulerSparse.cpp  implicitBackwardEulerSparse.h  implicitNewmarkSparse.cpp  implicitNewmarkSparse.h  integratorBaseSparse.cpp  integratorBaseSparse.h
libraries/sparseMatrix/: CMakeLists.txt  Makefile  sparseMatrix.cpp  sparseMatrix.h  sparseMatrixIndexRemapper.cpp  sparseMatrixIndexRemapper.h  sparseMatrixMT.cpp  sparseMatrixOutline.cpp  sparseMatrixOutline.h  sparseSubMatrixLinkage.cpp  sparseSubMatrixLinkage.h  sparseSuperMatrixLinkage.cpp  sparseSuperMatrixLinkage.h
libraries/sparseMatrix/VegaFEM.sparseMatrix.xcodeproj/: project.pbxproj
(+27 files in other folders)
